openshift/apps/banana-phone/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-phone
  namespace: banana-phone
  labels:
    app: banana-phone
spec:
  selector:
    matchLabels:
      app: banana-phone
  replicas: 1
  template:
    metadata:
      labels:
        app: banana-phone
    spec:
      containers:
        - name: banana-phone
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '500m'
              memory: 512Mi
            requests:
              cpu: '100m'
              memory: 128Mi
          image: quay.io/kenmoini/banana-phone:c22d6968bdaab84c16084f2214f172733a65bc8c
          ports:
            - containerPort: 8675
              protocol: TCP
  strategy:
    type: Recreate
